i fixed some issues with the submit button and i fixed the wrapper as it was cutting off

--- a/public/styles/styles.less
+++ b/public/styles/styles.less
@@ -10,9 +10,11 @@ body {
 }
 
 .wrapper {
-    background-image: url("https://images.unsplash.com/photo-1522223142907-0fbfb9c571c1?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b7a69d28bf8e5030872cb254ba06efbd&auto=format&fit=crop&w=2500&q=80");
+    background: url(https://images.unsplash.com/photo-1522223142907-0fbfb9c571c1?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b7a69d28bf8e5030872cb254ba06efbd&auto=format&fit=crop&w=2500&q=80)no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    height: 1000px;
 }
 
 #navbar {
@@ -111,7 +113,7 @@ h1 {
     color: @color2;
     font-size: 22px;
     font-weight: 350;
-    margin: 10px 280px
+    margin: 10px 252px
     
 }
 .box2{
